# MITO

./: CMakeLists.txt  README.txt
Installer/: setup.iss
docs/: MITO - How to compile.docx
libs/CxImage/CxImage/: ximamng.cpp
libs/CxImage/demo/: demoView.cpp
libs/CxImage/jasper/include/jasper/: jas_image.h  jas_init.c
libs/CxImage/jasper/jp2/: jp2_dec.c  jp2_enc.c
libs/VTK/Imaging/: vtkImageMapToWindowLevelColors.cxx
libs/VTK/Rendering/: vtkCamera.cxx  vtkCamera.h  vtkInteractorStyle.cxx  vtkInteractorStyle.h  vtkInteractorStyleTrackballCamera.cxx  vtkInteractorStyleTrackballCamera.h  vtkInteractorStyleWII.cxx  vtkInteractorStyleWII.h  vtkInteractorStyleWIITrackball.cxx  vtkInteractorStyleWIITrackball.h
libs/VTK/Widgets/: vtkBoxWidget.cxx  vtkBoxWidget.h
src/: HIDdevice.cxx  HIDdevice.h  MITO.APS  MITO.manifest  MITO.rc  PacsQueryWorkerThread.cxx  PacsQueryWorkerThread.h  WiiCommandEvents.h  anonymizeFilter.cxx  anonymizeFilter.h  appData.cxx  appData.h  appWxVtkInteractor.cxx  appWxVtkInteractor.h  colorTransferTable.h  dataHandler.cxx  dataHandler.h  exportFilter.cxx  exportFilter.h  flipFilter.cxx  flipFilter.h  fusionFilter.cxx  fusionFilter.h  globalState.h  imageDrawRoi.cxx  imageDrawRoi.h  imageProc.cxx  imageProc.h  infoFilter.cxx  infoFilter.h  itkDaub.h  itkFlip.h  itkFusion.h  itkFusion2.h  itkFusion3.h  itkVtkData.cxx  itkVtkData.h  itkVtkFilter.cxx  itkVtkFilter.h  itkWavelet.h  (+115 more)
src/icons/: -Skin.xpm  Album.xpm  All.xpm  Angle.xpm  Animate.xpm  Anonymizer.xpm  Axial.xpm  Bone.xpm  ConfidenceConnected.xpm  ConnectedThreshold.xpm  Coronal.xpm  Cut3d.xpm  Dolly.xpm  Execute.xpm  Export.xpm  ImageFusion.xpm  ImportDicomdir.xpm  ImportFile.xpm  ImportFolder.xpm  ImportStudy.xpm  Length.xpm  MIP.xpm  Move.xpm  Muscle.xpm  NeighborhoodConnected.xpm  OppositeSagittal.xpm  Pencil.xpm  Point.xpm  Polygon.xpm  QueryRetrieve.xpm  Rectangle.xpm  Rot3d.xpm  Rotate.xpm  Sagittal.xpm  Send.xpm  Skin.xpm  Surface.xpm  Trash.xpm  Viewer.xpm  VolumeRendering.xpm  (+3 more)
